# windmill

./: .gitignore  .travis.yml  Pipfile  README.md  package-lock.json  pyproject.toml  run_front.sh  run_local.sh  run_tests.sh  tox.ini
.github/workflows/: pythonpackage.yml
app/af_handlers/: marshallers.py  operator_handler.py
app/http/api/: endpoints.py
app/http/app/src/components/Navbar/: Navbar.tsx
app/http/web/app/: README.md  package.json  tsconfig.json
app/tests/: test_af_marshalling.py
scripts/: build.sh  publish.sh
tests/: __init__.py  test_api.py  test_cli.py  test_dag_conversions.py  test_dag_imports.py  test_operators.py  test_wml_conversions.py
tests/data/: Valid.wml  valid.py
windmill/: __init__.py  constants.py  exceptions.py
windmill-ui/: README.md  package-lock.json  package.json
windmill-ui/public/: index.html
windmill-ui/src/: App.tsx  index.tsx
windmill-ui/src/components/: DragAndDropSidebar.tsx  Page.tsx  SelectedSidebar.tsx  SidebarItem.tsx  Theme.tsx  index.ts
windmill-ui/src/components/Airflow/: AirflowNode.tsx  AirflowOperator.tsx  AirflowPanel.tsx  index.ts
windmill-ui/src/components/Navbar/: Navbar.tsx  NavbarDropdowns.tsx  index.ts
windmill-ui/src/components/Page/: Page.tsx  ResizablePanel.tsx  ResizablePanels.bak.tsx
windmill-ui/src/components/Sidebar/: DragAndDropSidebar.tsx  SelectedSidebar.tsx  Sidebar.tsx  SidebarItem.tsx  index.ts
windmill-ui/src/components/Toolbar/: Toolbar.tsx
windmill-ui/src/misc/: exampleAirflowOperators.ts  exampleChartState.ts  icon.tsx
windmill/cli/: cli.py
windmill/config/: __init__.py  base_config.py  project.py  project_config.py  run_config.py
windmill/dags/: dag_handler.py
windmill/http/api/: __init__.py  endpoints.py
windmill/http/app/: .gitignore  package-lock.json  package.json
windmill/http/app/public/: index.html
windmill/http/app/src/: ApiClient.tsx  App.tsx  index.ts
windmill/http/app/src/components/: Theme.tsx  index.ts
windmill/http/app/src/misc/: defaultChartState.ts  icon.tsx
windmill/models/: __init__.py
windmill/models/dags/: dag_handler.py
windmill/models/operators/: __init__.py  operator_handler.py  operator_index.py
windmill/models/schemas/: __init__.py  airflow_schemas.py  app_schemas.py
windmill/operators/: operator_handler.py  operator_index.py
windmill/schemas/: app_schemas.py
windmill/tasks/: __init__.py  create_project.py  init.py  run.py
windmill/templates/: dag.j2
windmill/tests/: test_api.py  test_operators.py
windmill/utils/: __init__.py  class_parser.py  docstring_parser.py  exceptions.py  import_handler.py
www/: app.py
www/static/: viewer.html
www/static/js/: Editor.js  Format.js  Graph.js  Init.js  Sidebar.js
www/static/resources/: grapheditor.txt
www/templates/: index.html
(+25 files in other folders)
