[tool.poetry]
name = "airflow-windmill"
version = "0.0.3"
description = "Drag'N'Drop Web Frontend for Building and Managing Airflow DAGs"
authors = ["mayansalama <micsalama@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [
    {include = "windmill"}
]
homepage = "https://github.com/mayansalama/windmill"
repository = "https://github.com/mayansalama/windmill"
exclude = ["windmill/http/app/*"]
include = ["windmill/http/app/dist/*"]

[tool.poetry.dependencies]
python = "^3.6"
marshmallow = "^3.0"
docstring-parser = "^0.3.0"
decli = "^0.5.1"
flask-cors = "^3.0.8"
pyyaml = "^5.1.2"
networkx = "^2.3"
jinja2 = "^2.10.1"
inflection = "^0.3.1"
black = {version = "^18.3-alpha.0"}
apache-airflow = {version = "1.10.4", optional = true}
doc-cli = "^0.0.4"
gitpython = "^3.0.2"

[tool.poetry.extras]
airflow = ["apache-airflow"]

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pytest = "5.0.1"
rope = "^0.14.0"

[tool.poetry.scripts]
windmill = "windmill:cli.cli.Cli.run_cli"
windmill-dev = "windmill:cli.cli.DevCli.run_cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
